<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/home_page_title"
        android:textSize="@dimen/title_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textGraphsPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/graphical_data"
        android:textSize="@dimen/regular_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <TextView
        android:id="@+id/textMapsPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/data_locations"
        android:textSize="@dimen/regular_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGraphsPage" />

    <TextView
        android:id="@+id/textInfoPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/info_documentation"
        android:textSize="@dimen/regular_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMapsPage" />

    <Button
        android:id="@+id/buttonGraphsPage"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/graphs_button"
        android:textSize="@dimen/button_font_size"
        app:backgroundTint="@null"
        app:icon="@drawable/database"
        app:layout_constraintBaseline_toBaselineOf="@+id/textGraphsPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline" />

    <Button
        android:id="@+id/buttonMapsPage"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/maps_button"
        android:textSize="@dimen/button_font_size"
        app:backgroundTint="@null"
        app:icon="@drawable/map"
        app:layout_constraintBaseline_toBaselineOf="@+id/textMapsPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline" />

    <Button
        android:id="@+id/buttonInfoPage"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/info_button"
        android:textSize="@dimen/button_font_size"
        app:backgroundTint="@null"
        app:icon="@drawable/info"
        app:layout_constraintBaseline_toBaselineOf="@+id/textInfoPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loginGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="textAdminSection,textAdminPage,textSettingsPage,buttonAdminPage,buttonSettingsPage" />

    <TextView
        android:id="@+id/textAdminSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/administrative_title"
        android:textSize="@dimen/regular_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInfoPage" />

    <TextView
        android:id="@+id/textAdminPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/admin_panel"
        android:textSize="@dimen/regular_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdminSection" />

    <TextView
        android:id="@+id/textSettingsPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/application_settings"
        android:textSize="@dimen/regular_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdminPage" />

    <Button
        android:id="@+id/buttonAdminPage"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/admin_button"
        android:textSize="@dimen/button_font_size"
        app:backgroundTint="@null"
        app:icon="@drawable/admin_panel"
        app:layout_constraintBaseline_toBaselineOf="@+id/textAdminPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline" />

    <Button
        android:id="@+id/buttonSettingsPage"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/settings_button"
        android:textSize="@dimen/button_font_size"
        app:backgroundTint="@null"
        app:icon="@drawable/settings"
        app:layout_constraintBaseline_toBaselineOf="@+id/textSettingsPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline" />

    <ImageButton
        android:id="@+id/buttonHome"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/home_button"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home"
        app:tint="?colorOnPrimary"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/buttonLoginPage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/login_logout_button"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/bug"
        app:tint="?colorOnPrimary"
        tools:ignore="RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>